lvl2/cpp/cgo_lib/cgo_lib.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package com.stbaer/demo_cgo */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h> /* for ptrdiff_t below */

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "main.go"


 #include "/Users/imhiro/AllFiles/103_prog/europython_2019/lvl2/go/src/com.stbaer/demo_cgo/lvl2_cgo_support.h"

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef __SIZE_TYPE__ GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif


extern int cgo_Add(int p0, int p1);

extern char* cgo_GetMostBeFriendedReport(OPAQUE_OID_LIST p0);

extern long unsigned int cgo_NewPerson(char* p0, char* p1, unsigned int p2);

extern void cgo_DeletePerson(long unsigned int p0);

extern char* cgo_Person_Firstname(long unsigned int p0);

extern char* cgo_Person_Lastname(long unsigned int p0);

extern char* cgo_Person_String(long unsigned int p0);

extern unsigned int cgo_Person_Age(long unsigned int p0);

extern unsigned int cgo_Person_AddFriend(long unsigned int p0, long unsigned int p1, char** p2);

extern OPAQUE_OID_LIST cgo_Person_GetFriends(long unsigned int p0);

extern OPAQUE_STRING_LIST cgo_Person_GetFriendFirstNames(long unsigned int p0);

extern OPAQUE_UINT2UINT_MAP cgo_Person_GetFriendCountByAge(long unsigned int p0);

//LVL3

extern OPAQUE_OID_LIST cgo_Person_GetFriendsFiltered(long unsigned int p0, CALLBACK_OID_PERSON p1);

//LVL3

extern OPAQUE_OID_LIST cgo_Person_GetFriendsFilteredByAge(long unsigned int p0, CALLBACK_AGE p1);

//LVL4

extern OPAQUE_OID_LIST cgo_Person_GetFriendsFilteredByAge_2(long unsigned int p0, CALLBACK_AGE_2 p1, void* p2);

#ifdef __cplusplus
}
#endif